# fast-api-chatbot-gemini

./: .env.example  .gitignore  .pre-commit-config.yaml  README.md  confest.py  main.py  pyproject.toml  pyrefly.toml  requirements.txt
.github/workflows/: lint.yml  tests.yml  typecheck.yml
app/controllers/: anime_controller.py  health_check_controller.py
app/models/: user_models.py
app/routes/: api_routes.py  view_routes.py
app/static/css/: emoji.css  style.css
app/static/js/: chat.js  emoji.js
app/templates/: index.html
app/utils/: logger.py
tests/: test_anime_controller.py  test_api_routes.py  test_health_controller.py  test_user_models.py
