[project]
name = "own-chatbot"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "annotated-doc>=0.0.4",
    "annotated-types>=0.7.0",
    "anyio>=4.12.1",
    "cachetools>=6.2.4",
    "certifi>=2026.1.4",
    "charset-normalizer>=3.4.4",
    "click>=8.3.1",
    "deprecated>=1.3.1",
    "distro>=1.9.0",
    "fastapi>=0.128.0",
    "google-auth>=2.47.0",
    "google-genai>=1.60.0",
    "h11>=0.16.0",
    "httpcore>=1.0.9",
    "httptools>=0.7.1",
    "httpx>=0.28.1",
    "idna>=3.11",
    "iniconfig>=2.3.0",
    "jinja2>=3.1.6",
    "limits>=5.6.0",
    "markupsafe>=3.0.3",
    "packaging>=26.0",
    "pluggy>=1.6.0",
    "pyasn1>=0.6.2",
    "pyasn1-modules>=0.4.2",
    "pydantic>=2.12.5",
    "pydantic-core>=2.41.5",
    "pygments>=2.19.2",
    "pytest>=9.0.2",
    "python-dotenv>=1.2.1",
    "python-multipart>=0.0.21",
    "pyyaml>=6.0.3",
    "requests>=2.32.5",
    "rsa>=4.9.1",
    "slowapi>=0.1.9",
    "sniffio>=1.3.1",
    "starlette>=0.50.0",
    "tenacity>=9.1.2",
    "typing-extensions>=4.15.0",
    "typing-inspection>=0.4.2",
    "urllib3>=2.6.3",
    "uvicorn>=0.40.0",
    "uvloop>=0.22.1",
    "watchfiles>=1.1.1",
    "websockets>=15.0.1",
    "wrapt>=2.0.1",
]

[dependency-groups]
dev = ["ruff>=0.14.13"]

[tool.ruff]
# Target Python version
target-version = "py312"
line-length = 88

[tool.ruff.lint]
# Enable Pyflakes (`F`) and pycodestyle (`E`, `W`) codes by default.
select = ["E", "F", "B", "I"]
ignore = []

# Allow autofix for all enabled rules (when `--fix`) is provided.
fixable = ["ALL"]
unfixable = []
